# zr-obp

./: pyproject.toml
src/obp/ope/: classification_model.py  estimators_embed.py
tests/dataset/: test_synthetic.py
tests/ope/: test_dr_estimators.py  test_dr_estimators_continuous.py  test_ipw_estimators.py
tests/policy/: test_offline.py
